--- a/AC-STYLE-checkpoint-2/assets/stylesheet/styles.css
+++ b/AC-STYLE-checkpoint-2/assets/stylesheet/styles.css
@@ -1,6 +1,3 @@
-* {
-  font-family: "Open Sans", sans-serif;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -91,7 +88,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: "Open Sans", sans-serif;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -130,45 +127,81 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+/* Flex */
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Container */
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 32px;
 }
+
+/* Top Social Media Icons */
+
 .sm-icons {
   text-align: center;
-  padding-top: 50px;
+  padding-top: 30px;
 }
+.sm-icons a {
+  text-decoration: none;
+}
+.sm-icons img {
+  width: 40px;
+  margin-left: 10px;
+}
+
+/* Background Image */
+.header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.474), rgba(0, 0, 0, 0.474)),
+    url("https://raw.githubusercontent.com/suraj122/AC-STYLE-checkpoint-2/c56a65f9e9926a53b66c431fc3653612c8b1900a/assets/media/banner.jpg");
+
+  background-repeat: no-repeat;
+  padding-bottom: 160px;
+}
+
+/* Main Heading + Navigation */
 .heading {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
-  max-width: 1200px;
-  margin: 50px 100px;
+  margin: 30px 100px;
 }
 
-.header {
-  background-image: url("https://raw.githubusercontent.com/suraj122/AC-STYLE-checkpoint-2/c56a65f9e9926a53b66c431fc3653612c8b1900a/assets/media/banner.jpg");
-  background-color: rgba(0, 0, 0, 0.474);
-
-  padding-bottom: 180px;
-}
 .black-bar {
   width: 100%;
   height: 20px;
   background-color: black;
 }
+
+/* Navigation bar */
 .nav a {
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   text-transform: uppercase;
   color: black;
   margin-left: 10px;
 }
+/* Logo -left */
 .brand img {
   width: 80px;
+}
+.brand {
+  display: flex;
+  justify-content: left;
+}
+
+.left-side-logo h2 {
+  padding-left: 10px;
 }
 .nav .active {
   color: #eb523e;
@@ -178,6 +211,8 @@ table {
 .contact {
   margin-right: 20px;
 }
+
+/* Main Hero Content */
 .heading-hero {
   text-align: center;
   padding-top: 150px;
@@ -226,7 +261,7 @@ table {
   margin-right: 10px;
 }
 .section-3 h1 {
-  font-size: 48px;
+  font-size: 38px;
   text-decoration: underline;
   text-transform: uppercase;
   color: #2f2e29;
@@ -234,28 +269,28 @@ table {
   padding-top: 100px;
 }
 .section-3 h5 {
-  font-size: 20px;
+  font-size: 18px;
   text-transform: uppercase;
   color: #2f2e29;
   text-align: center;
   padding-top: 20px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 .rectangles {
   margin: 0 auto;
-  width: 1000px;
-  height: 300px;
+  width: 1200px;
+  height: 200px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 .rectangles img {
   width: 50px;
-  padding: 120px 75px;
+  padding: 100px 100px;
 }
 .rect-1 {
-  width: 200px;
-  height: 290px;
+  width: 250px;
+  height: 250px;
 }
 .green {
   background-color: #5bbd9d;
@@ -270,18 +305,20 @@ table {
   background-color: #68ce72;
 }
 .gallery img {
-  width: 300px;
+  width: 250px;
 }
 .gallery {
   display: flex;
   justify-content: space-around;
   margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .members img {
   border-radius: 50%;
 }
 .section-4 h3 {
-  font-size: 30px;
+  font-size: 25px;
   text-transform: uppercase;
   color: #2f2e29;
   text-align: center;
@@ -293,13 +330,13 @@ table {
   color: #2f2e29;
   text-align: center;
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  margin-bottom: 40px;
 }
 .section-col {
   line-height: 1.2;
-  width: 65%;
-}
-.section-col-2 {
+  width: 70%;
+  padding-right: 50px;
 }
 
 .section-col-2 .photo {
@@ -335,6 +372,21 @@ table {
   text-transform: uppercase;
   font-weight: 900;
 }
+
+.grey-div {
+  background-color: grey;
+  width: 150px;
+}
+.orange-div {
+  background-color: #eb523e;
+  width: 50%;
+  padding: 10px 0 10px 10px;
+}
+.orange-div p {
+  color: white;
+  font-size: 20px;
+}
+
 .section-1-2 {
   display: flex;
   justify-content: center;
@@ -396,14 +448,31 @@ table {
 .last-text p {
   line-height: 1.3;
 }
-.submit-btn {
-  background-color: #eb523e;
-  border: 1px solid #eb523e;
-  color: white;
-  padding: 10px 100px;
+.last-text {
+  padding-right: 50px;
 }
-.form-style-1 li {
-  margin: 10px;
+.form h6 {
+  border: 1px solid grey;
+  padding: 10px;
+  margin: 10px 0;
+  padding-right: 300px;
+  font-weight: 500;
+  color: grey;
+}
+.form h4 {
+  border: 1px solid grey;
+  padding: 10px;
+  padding-bottom: 80px;
+  margin: 10px 0;
+  padding-right: 300px;
+  font-weight: 500;
+  color: grey;
+}
+.form .submit {
+  background-color: #eb523e;
+  text-align: center;
+  padding: 15px 0;
+  color: white;
 }
 .text-box {
   display: flex;
@@ -431,6 +500,7 @@ table {
   background-color: #eb523e;
   padding: 20px;
   width: 30%;
+  position: fixed;
 }
 .brand-logo-gallery {
   display: flex;
@@ -444,7 +514,7 @@ table {
   color: white;
 }
 .brand-logo-gallery h4 {
-  font-size: 20px;
+  font-size: 12px;
   color: white;
   border: 2px solid white;
   padding: 10px 15px;
@@ -482,6 +552,8 @@ main h1 {
   font-size: 44px;
   margin-top: 20px;
   font-weight: 550;
+  color: black;
+  text-decoration: none;
 }
 .main-gallery-images {
   display: flex;
@@ -498,4 +570,24 @@ main h1 {
 .main-gallery-images img {
   border: 2px solid black;
   border-radius: 5px;
+}
+.last-text span {
+  color: orangered;
+}
+.sm-icons-gallery img {
+  width: 35px;
+  margin-top: 20px;
+  margin-right: 10px;
+}
+.logo-attach h2 {
+  font-size: 25px;
+  color: white;
+  margin-right: 50px;
+  text-transform: uppercase;
+}
+.brand-logo-gallery a {
+  text-decoration: none;
+}
+.gallery-header {
+  text-decoration: none;
 }
